Fixed some findbugs errors.